syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message MakerSellAssetContract {
    bytes owner_address = 1;
    bytes sell_token_id = 4;
    int64 sell_token_quantity = 6;
    bytes buy_token_id = 5;
    int64 buy_token_quantity = 7;
}

message MakerCancelOrderContract {
//    bytes owner_address = 1;
//    int64 sell_token_id = 2;
//    bytes buy_token_id = 3;
    int64 order_id = 4;
}